# build-environment

./: .gitignore  README.md  pyproject.toml  sources.json
promisedio_build_environment/: capsule.py  clinic.py  download_sources.py  memcheck.py  myclinic.py
promisedio_build_environment/headers/: promisedio.h  promisedio_uv.h
promisedio_build_environment/headers/promisedio/: atomic.h  capsule.h  chain.h  memory.h  module.h  uv.h
promisedio_build_environment/include/: clinic_converters.h
promisedio_build_environment/include/_promisedio/: atomic.h  base.h  capsule.h  memory.h  module.h  uv.h
promisedio_build_environment/include/_promisedio/3.10.2/: capsule.h
promisedio_buildtools/: clinic.py
