[tool.poetry]
name = "promisedio-build-environment"
version = "1.0.14"
description = "Promisedio build environment"
authors = ["aachurin <aachurin@gmail.com>"]
license = "MIT License"
repository = "https://github.com/promisedio/build-environment"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.scripts]
download_sources = "promisedio_build_environment.download_sources:run"
capsule = "promisedio_build_environment.capsule:main"
clinic = "promisedio_build_environment.clinic:main"
memcheck = "promisedio_build_environment.memcheck:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
